MTP-11 API получения публикации (#4)
Коммиты:

* MTP-11 API получения публикации: сервисный класс

* MTP-11 API получения публикации: контроллер

* MTP-11 API получения публикации: swagger
