# app/controllers/posts_controller.rb
@@ -1,4 +1,12 @@
 class PostsController < ApplicationController
+  # Возвращает публикацию по идентификатору
+  #
+  # @example {include:file:../http/posts/get.http}
+  def show
+    post = GetPost.run! post_id: params[:id]
+    render json: PostSerializer.serialize(post)
+  end
+
   # Создаёт и возвращает новую публикацию
   #
   # @example {include:file:../http/posts/create.http}
